<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        android:hint="@string/search_title"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item android:id="@+id/filter"
        android:title="@string/filtration"
        android:onClick="onClickFilter"
        app:showAsAction="always"
        android:icon="@drawable/filter_outline"/>

    <item android:id="@+id/clearAll"
        android:title="@string/clear_data"
        android:onClick="onClickClearAll"
        app:showAsAction="never" />

    <item android:id="@+id/loadFile"
        android:title="@string/load_backup"
        android:onClick="onClickLoadFile"
        app:showAsAction="never" />

    <item android:id="@+id/saveFile"
        android:title="@string/save_backup"
        android:onClick="onClickSaveFile"
        app:showAsAction="never" />

    <item android:id="@+id/changeLanguage"
        android:title="@string/change_language"
        android:onClick="onClickChangeLanguage"
        app:showAsAction="never" />

    <item android:id="@+id/connectToGoogle"
        android:title="@string/connect_to_google"
        android:onClick="onClickAskForLogin"
        app:showAsAction="never" />

    <item
        android:id="@+id/refresh"
        android:icon="@android:drawable/ic_popup_sync"
        android:onClick="onClickRefresh"
        android:title="@string/refresh"
        app:showAsAction="always" />



</menu>