<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="#4e6ec6"
        android:textSize="20sp"
        android:gravity="start" />

    <EditText
        android:id="@+id/editTextTitleAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value"
        android:textColor="#4e6ec6"
        android:textSize="20sp"
        android:gravity="start" />


    <EditText
        android:id="@+id/editTextValueAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#4e6ec6"
            android:textSize="20sp"
            android:gravity="start"
            android:layout_marginRight="15dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#4e6ec6"
            app:srcCompat="@android:drawable/ic_menu_my_calendar"
            android:onClick="onClickCalendaAdd"/>


    </LinearLayout>


    <EditText
        android:id="@+id/editTextDateAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DD.MM.YYYY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buttonAddOutgo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:onClick="onClickAdd"/>

        <Button
            android:id="@+id/buttonCancelOutgo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:onClick="onClickCancel"/>


    </LinearLayout>

</LinearLayout>